adicionando service, estudando condicionais, loops, input e output

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!-- <app-home></app-home> -->
+<app-home name="um valor aleatorio" (emitindoValorNome)="logar($event)"></app-home>
 <router-outlet />
